hard-gists/2038329/run.log
=== Docker Run Log for 2038329 ===
Started at: Mi 29. Okt 12:57:54 CET 2025

[2025-10-29 12:57:55] START: Running container for 2038329
[2025-10-29 12:57:55] SUCCESS: Container 1f2789f25efc6d0b79f2493a0aa44f86e4f1059939b9f0001a2842d6bbf76f95 started for 2038329
=== Container logs for 2038329 ===
  File "/snippet.py", line 27
    print map(goodtill,inds)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2038329 ===
[2025-10-29 12:57:57] INFO: Container 1f2789f25efc6d0b79f2493a0aa44f86e4f1059939b9f0001a2842d6bbf76f95 has stopped
